issue #11 fixed